fix broken styles

--- a/app/components/articleSearch/articleSearch.scss
+++ b/app/components/articleSearch/articleSearch.scss
@@ -143,11 +143,25 @@
   }
 }
 
+// content-like width
+@media (max-width: 1200px) {
+  .rightBoxWrapper {
+    display: none;
+  }
+
+  .innerContainer {
+    margin: 0 auto;
+  }
+}
+
 // Mobile
 @media (max-width: $mobile-width) {
-  .rootWrapper,
   .articleSearchContainer {
     padding-bottom: 0;
+  }
+
+  .rootWrapper {
+    padding-bottom: 332px;
   }
 
   .authorItemSectionWrapper {
