--- a/app/components/articleSearch/components/guruBox/guruBox.scss
+++ b/app/components/articleSearch/components/guruBox/guruBox.scss
@@ -135,7 +135,7 @@ $max-author-name-width: 254px;
 }
 
 // Mobile
-@media (max-width: $mobile-width) {
+@media (max-width: 1200px) {
   .guruBoxWrapper {
     display: none;
   }
