--- a/app/components/layouts/footer.scss
+++ b/app/components/layouts/footer.scss
@@ -1,5 +1,5 @@
 .footerContainer {
-  width: $container_width;
+  max-width: $container_width;
   position: relative;
   margin: 0 auto;
   display: flex;
